--- a/dashboards/sampletv.erb
+++ b/dashboards/sampletv.erb
@@ -18,7 +18,7 @@ $(function() {
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-view="Image" data-image="http://dashing.io/images/bowtie.png"></div>
+      <div data-view="Image" data-image="http://woliper.com/wp-content/uploads/2014/09/angry-cartoon-turtle.jpg"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
