--- a/dashboards/sampletv.erb
+++ b/dashboards/sampletv.erb
@@ -34,10 +34,10 @@ $(function() {
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-view="Image" data-image="http://woliper.com/wp-content/uploads/2014/09/angry-cartoon-turtle.jpg"></div>
+      <div data-view="Image" data-image="http://images54.fotki.com/v627/photos/2/292835/3713364/kil-vi.jpg"></div>
     </li>
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-view="Image" data-image="http://woliper.com/wp-content/uploads/2014/09/angry-cartoon-turtle.jpg"></div>
+      <div data-view="Image" data-image="http://survivalathome.com/wp-content/uploads/2014/07/bow-drill.jpg"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
